[tool.poetry]
name = "visualize"
version = "0.0.1"
description = "Visualization function collection"
readme = "README.md"
authors = [
    "Alexander Engels <alexander.engels@dak.de>"
]
license = "Proprietary"
repository = "https://github.com/aengels-git/visualize"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
matplotlib = "^3.5.2"
seaborn = "~0.12.2"
pandas = "^1.3.0" 
polars = "^0.17.14"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
