[tool.poetry]
name = "visualize"
version = "0.0.1"
description = "Visualization function collection"
readme = "README.md"
authors = [
    "Alexander Engels <alexander.engels@dak.de>"
]
license = "Proprietary"
repository = "https://github.com/aengels-git/visualize"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "~1"
matplotlib = "~3"
seaborn = "~0.12"
pandas = "~1" 
polars = "~0"
pyarrow = "~8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
